<resources>
    <string name="app_name">Traveler</string>
    <string name="username_hint_login_activity">Username</string>
    <string name="password_hint_login_activity">Password</string>
    <string name="sign_in_button_login_activity">Sign In</string>
    <string name="sign_up_text_view_login_activity">You do not have an account ? Sign up</string>
    <string name="dialog_message_login_activity">Please Wait....</string>
    <string name="dialog_title_login_activity">Checking username</string>
    <string name="to_short_edit_text_username_login_activity">Username is to short</string>
    <string name="to_short_edit_text_password_login_activity">Password is to short</string>
    <string name="username_text_view_registration_activity">Username</string>
    <string name="password_text_view_registration_activity">Password</string>
    <string name="password_again_text_view_registration_activity">Password again</string>
    <string name="mail_text_view_registration_activity" translatable="false">E-mail</string>
    <string name="registration_button_registration_activity">Sign up</string>
    <string name="add_attraction_button_menu_activity">Add attraction</string>
    <string name="browse_the_attraction_button_menu_activity">Browse the attractions</string>
    <string name="browse_the_tours_button_menu_activity">Browse the tours</string>
    <string name="add_tour_button_menu_activity">Add tour</string>
    <string name="where_am_i_button_menu_activity">Where Am I</string>
    <string name="my_trips_button_menu_activity">My trips</string>
    <string name="alert_dialog_message_for_synchronization_text_menu_activity">Do you want to synchronize your database?</string>
    <string name="alert_dialog_message_when_user_click_back_button">What you want to do ?</string>
    <string name="alert_dialog_positive_button_menu_activity">Yes</string>
    <string name="alert_dialog_negative_button_menu_activity">No</string>
    <string name="alert_dialog_exit_button_menu_activity">Exit</string>
    <string name="alert_dialog_logout_button_menu_activity">Logout</string>
    <string name="alert_dialog_cancel_button_menu_activity">Cancel</string>
    <string name="check_box_device_synchronization_activity">Device Memory</string>
    <string name="check_box_sd_card_synchronization_activity">SD card</string>
    <string name="button_localization_add_attraction_activity">Localize</string>
    <string name="button_map_add_attraction_activity">Map</string>
    <string name="attraction_name_text_view_add_attraction_activity">Name</string>
    <string name="attraction_localization_country_text_view_add_attraction_activity">Country</string>
    <string name="attraction_localization_state_text_view_add_attraction_activity">Province/State</string>
    <string name="attraction_localization_place_text_view_add_attraction_activity">City/Village/Place/Spot</string>
    <string name="attraction_category_text_view_add_attraction_activity">Category</string>
    <string name="attraction_address_text_view_add_attraction_activity">Address</string>
    <string name="attraction_address_edit_text_hint_add_attraction_activity">SomeStreet 666</string>
    <string name="attraction_description_text_view_add_attraction_activity">Description</string>
    <string name="take_photo_button_add_attraction_activity">Take Photo</string>
    <string name="dialog_title_attraction_activity">Adding attraction</string>
    <string name="dialog_message_attraction_activity">Please Wait....</string>
    <string name="dialog_title_checking_position_attraction_activity">Checking Position</string>
    <string name="dialog_message_checking_position_attraction_activity">Please Wait....</string>
    <string name="toast_attraction_added_attraction_activity">Attraction added</string>
    <string name="alert_dialog_message_for_wrong_localization_text_add_attraction_activity">Sorry, but we did not find your location</string>
    <string name="alert_dialog_ok_button_add_attraction_activity" translatable="false">OK</string>
    <string name="alert_dialog_message_for_localization_text_add_attraction_activity">The following location data was found:</string>
    <string name="alert_dialog_message_for_localization_next_text_add_attraction_activity">Do you want to set them now?</string>
    <string name="alert_dialog_yes_button_add_attraction_activity">Yes</string>
    <string name="alert_dialog_no_button_add_attraction_activity">No</string>
    <string name="dialog_message_country_attraction_activity">Country</string>
    <string name="dialog_message_province_attraction_activity">Province</string>
    <string name="dialog_message_place_attraction_activity">Place</string>
    <string name="dialog_message_address_attraction_activity">Address</string>
    <string name="attraction_add_attraction_button_add_attraction_activity">Add Attraction</string>
    <string name="dialog_message_menu_activity">Please Wait....</string>
    <string name="dialog_title_menu_activity">Synchronizing Countries</string>
    <string name="dialog_message_state_menu_activity">Please Wait....</string>
    <string name="dialog_title_state_menu_activity">Synchronizing States</string>
    <string name="dialog_message_place_menu_activity">Please Wait....</string>
    <string name="dialog_title_place_menu_activity">Synchronizing Places</string>
    <string name="dialog_message_category_menu_activity">Please Wait....</string>
    <string name="dialog_title_category_menu_activity">Synchronizing Categories</string>
    <string name="dialog_message_attraction_menu_activity">Please Wait....</string>
    <string name="dialog_title_attraction_menu_activity">Synchronizing Attractions</string>
    <string name="dialog_message_tour_menu_activity">Please Wait....</string>
    <string name="dialog_title_tour_menu_activity">Synchronizing Tours</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_view_country_synchronization_activity">Pick country to synchronized</string>
    <string name="back_button_browse_attraction_activity">Back</string>
    <string name="next_button_browse_attraction_activity">Next</string>
    <string name="exit_button_browse_attraction_activity">Exit</string>
    <string name="attractions_text_view_browse_attraction_activity">Attractions</string>
    <string name="attractions_spinner_All_browse_attraction_activity">All</string>
    <string name="attraction_name_table_row_browse_attraction_activity">Name:</string>
    <string name="attraction_country_table_row_browse_attraction_activity">Country:</string>
    <string name="attraction_state_table_row_browse_attraction_activity">Province:</string>
    <string name="attraction_description_table_row_browse_attraction_activity">Description:</string>
    <string name="attraction_author_table_row_browse_attraction_activity">Author:</string>
    <string name="alert_dialog_message_text_browse_attraction_activity">You do not have access to the internet so you will not have photo of attraction do you want to continue?</string>
    <string name="alert_dialog_positive_button_browse_attraction_activity">Yes</string>
    <string name="alert_dialog_negative_button_browse_attraction_activity">No</string>
    <string name="attraction_country_attraction_details_activity">Country:</string>
    <string name="attraction_state_attraction_details_activity">Province:</string>
    <string name="attraction_place_attraction_details_activity">Place:</string>
    <string name="attraction_address_attraction_details_activity">Address:</string>
    <string name="attraction_category_attraction_details_activity">Category:</string>
    <string name="attraction_author_attraction_details_activity">Author:</string>
    <string name="button_start_trip_attraction_details_activity">Start Trip</string>
    <string name="back_button_browse_tour_activity">Back</string>
    <string name="next_button_browse_tour_activity">Next</string>
    <string name="exit_button_browse_tour_activity">Exit</string>
    <string name="attractions_text_view_browse_tours_activity">Tours</string>
    <string name="tours_spinner_All_browse_tours_activity">All</string>
    <string name="tour_name_table_row_browse_tour_activity">Name:</string>
    <string name="tour_country_table_row_browse_tour_activity">Country:</string>
    <string name="tour_state_table_row_browse_tour_activity">Province:</string>
    <string name="tour_description_table_row_browse_tour_activity">Description:</string>
    <string name="tour_author_table_row_browse_tour_activity">Author:</string>
    <string name="tour_attraction_count_table_row_browse_tour_activity">Attractions in tour:</string>
    <string name="all_attractions_tour_details_activity">All attractions</string>
    <string name="tour_country_tour_details_activity">Country:</string>
    <string name="tour_state_tour_details_activity">Province:</string>
    <string name="tour_attractions_count_tour_details_activity">Attractions in tour:</string>
    <string name="button_map_tour_details_activity">Show Map</string>
    <string name="button_start_trip_tour_details_activity">Start Trip</string>
    <string name="text_view_tour_name_add_tour_activity">Name</string>
    <string name="text_view_tour_description_add_tour_activity">Description</string>
    <string name="text_view_tour_country_add_tour_activity">Country</string>
    <string name="text_view_tour_state_add_tour_activity">Province</string>
    <string name="button_pick_attractions_add_tour_activity">Pick Attractions</string>
    <string name="text_view_attraction_count_pick_attraction_for_tour_activity">Attractions in the trip:</string>
    <string name="button_add_tour_pick_attraction_for_tour_activity">Add a tour</string>
    <string name="button_next_pick_attraction_for_tour_activity">Next</string>
    <string name="button_back_pick_attraction_for_tour_activity">Back</string>
    <string name="button_add_pick_attraction_for_tour_activity">Add</string>
    <string name="button_remove_pick_attraction_for_tour_activity">Remove</string>
    <string name="button_show_tour_attractions_pick_attraction_for_tour_activity">Show tour attractions</string>
    <string name="text_view_trip_trip_attractions_activity">Trip</string>
    <string name="attractions_spinner_All_trip_attractions_activity">All</string>
    <string name="button_start_trip_trip_attractions_activity">Start Trip</string>
    <string name="button_up_trip_attractions_activity">Up</string>
    <string name="button_down_trip_attractions_activity">Down</string>
    <string name="button_preview_trip_trip_attractions_activity">Preview Trip</string>
    <string name="button_next_attraction_trip_activity">Next Attraction</string>
    <string name="button_last_attraction_trip_activity">Last Attraction</string>
    <string name="button_end_trip_trip_activity">End Trip</string>
    <string name="text_view_current_attraction_text_trip_activity">Next destination</string>
    <string name="switch_track_me_text_trip_activity">Track me</string>
    <string name="marker_i_am_here_text_trip_activity">I am here</string>
    <string name="alert_dialog_message_text_next_attraction_trip_activity">Are you sure you want to set next destination point?</string>
    <string name="alert_dialog_positive_button_trip_activity">Yes</string>
    <string name="alert_dialog_negative_button_trip_activity">No</string>
    <string name="alert_dialog_message_text_end_trip_trip_activity">Are you sure you want to end this trip?</string>
    <string name="alert_dialog_message_last_attraction_trip_activity">Thank you for the trip, do you want to save that trip?</string>
    <string name="menu_popup_synchronization">Synchronization</string>
    <string name="menu_popup_download_photos">Download photos</string>
    <string name="menu_popup_clear_memory">Clear memory</string>
    <string name="menu_popup_synchronization_options">Synchronization options</string>
    <string name="menu_popup_logout">Logout</string>
</resources>